main.tf
terraform {
  cloud {
    organization = "lekhaSriVutla"

    workspaces {
      name = "lekha-vutla-app-eu-west-2-dev"
    }
  }
}

provider "aws" {
  region = var.aws_region
}

#Create security group with firewall rules
resource "aws_security_group" "security_tf_grp" {
  name        = var.security_group
  description = "my-second-ec2-server"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 # outbound from jenkins server
  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags= {
    Name = var.security_group
  }
}

resource "aws_instance" "mySecondInstance" {
  ami           = var.ami_id
  key_name = var.key_name
  instance_type = var.instance_type
  security_groups= [var.security_group]
  tags= {
    Name = var.tag_name
  }
}
# Create Elastic IP address
resource "aws_eip" "ElasticIP2" {
  vpc      = true
  instance = aws_instance.mySecondInstance.id
tags= {
    Name = "first_elastic_ip"
  }
}
